# SferumBot

./: main.py  pyproject.toml
tg/: bot.py
tg/methods/: send_error.py  send_message.py
vk/methods/: __init__.py  get_attachments.py  get_message.py
vk/vk_types/: event_message.py  message.py  user_cred.py
