[project]
name = "sferum-bot"
version = "0.1.2"
requires-python = "~=3.13"
dependencies = [
    "aiogram==3.19.0",
    "loguru==0.7.3",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
]

[tool.ruff]
select = ["ALL"]
ignore = ["BLE001", "PLR2004", "PLR0913", "PLE0604", "D105"]
force-exclude = true
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "pkg",
    "feast",
    "pkg",
    "feast",
]
# Same as Black.
line-length = 120
indent-width = 4
# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
